// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow strict

import * as c from './c';

declare var TypeAssertIs: $Facebookism$TypeAssertIs;
TypeAssertIs<(x: number) => string>(8);

=====================================output=====================================
// @flow strict

import * as c from "./c";

declare var TypeAssertIs: $Facebookism$TypeAssertIs;
TypeAssertIs<(x: number) => string>(8);

================================================================================
`;

exports[`b.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow strict

import * as a from './a';

declare var TypeAssertIs: $Facebookism$TypeAssertIs;
TypeAssertIs<(x: number) => string>(8);

=====================================output=====================================
// @flow strict

import * as a from "./a";

declare var TypeAssertIs: $Facebookism$TypeAssertIs;
TypeAssertIs<(x: number) => string>(8);

================================================================================
`;

exports[`c.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

import * as b from './b';

declare var TypeAssertIs: $Facebookism$TypeAssertIs;
TypeAssertIs<(x: number) => string>(8);

=====================================output=====================================
// @flow

import * as b from "./b";

declare var TypeAssertIs: $Facebookism$TypeAssertIs;
TypeAssertIs<(x: number) => string>(8);

================================================================================
`;
